<resources>
    <string name="app_name">Adventure Through Colombia</string>
    <string name="toolbar1">Login</string>
    <string name="welcome">Welcome</string>
    <string name="Erroruser">Invalid username or password</string>
    <string name="Errormenssage">Try Again</string>
    <string name="tex_Sig">SIGN UP</string>
    <string name="tex_Con">continue</string>
    <string name="tex_Username">Username</string>
    <string name="tex_mail">Email</string>
    <string name="tex_Email">email@domain.com</string>
    <string name="tex_Password">Password</string>
    <string name="tex_YouPassword">********</string>
    <string name="tex_Login">LOGIN</string>
    <string name="tex_Destinations">Destinations</string>
    <string name="tex_our">Our</string>
    <string name="tex_bog">Bogotá</string>
    <string name="tex_med">Medellín</string>
    <string name="tex_cart">Cartagena</string>
    <string name="tex_cali">Cali</string>
    <string name="tex_fullname">Full Name</string>
    <string name="tex_repeatpassword">Repeat Password</string>
    <string name="tex_yourname">Your Name</string>
    <string name="tex_baselogin">Fail to build database connection </string>
    <string name="tex_history">History</string>
    <string name="tex_gastronomy">Gastronomy</string>
    <string name="tex_parties">Parties</string>
    <string name="tex_cam">Camera</string>
    <string name="tex_cont">Developers</string>
    <string name="tex_help">Help</string>
    <string name="tex_home">Home</string>
    <string name="Goolge">Login by Google</string>
    <string name="hello_blank_fragment">Adventure Through Colombia</string>
    <string name="text_passworderror">passwords do not match</string>
    <string name="help">Welcome to Aventura por Colombia if you need help regarding the app</string>
    <string name="help2">you can communicate freely with any of the developers and let us know your difficulties</string>


</resources>