<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcomActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_barrainiciosesion"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_200"
        android:elevation="8dp"
        app:logo="@drawable/logo"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="158dp"
            android:src="@drawable/usuario" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tex_Username"
            android:textSize="20dp"
            android:textColor="@color/purple_500"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="left"/>


        <EditText
            android:id="@+id/edtusername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_margin="15dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/style_stroke"
            android:hint="@string/tex_Email" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tex_Password"
            android:textSize="20dp"
            android:textColor="@color/purple_500"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="left" />

        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/style_stroke"
            android:hint="@string/tex_YouPassword"
            android:inputType="textPassword"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/destino"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="15dp"
            android:onClick="destino"
            android:text="@string/tex_Login"
            android:textSize="25dp"
            app:cornerRadius="10dp" />

        <TextView
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="30dp"
            android:text="inicia sesio con"
            android:textColor="@color/purple_500"
            android:textSize="15dp" />



    </LinearLayout>

</LinearLayout>