<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tex_Sig"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:fontFamily="@font/source_titulo"/>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:text="@string/tex_fullname"
            android:textColor="@color/purple_500"
            android:textSize="18dp"
            android:fontFamily="@font/source_titulo"/>

        <EditText
            android:id="@+id/editTextnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/style_stroke"
            android:ems="10"
            android:hint="@string/tex_yourname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:fontFamily="@font/source_texto"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:text="@string/tex_Username"
            android:textColor="@color/purple_500"
            android:textSize="18dp"
            android:fontFamily="@font/source_titulo"/>

        <EditText
            android:id="@+id/editTextusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/style_stroke"
            android:ems="10"
            android:hint="@string/tex_Username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:fontFamily="@font/source_texto"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:text="@string/tex_mail"
            android:textColor="@color/purple_500"
            android:textSize="18dp"
            android:fontFamily="@font/source_titulo"/>

        <EditText
            android:id="@+id/editTextcorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/style_stroke"
            android:ems="10"
            android:hint="@string/tex_Email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:fontFamily="@font/source_texto"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:text="@string/tex_Password"
            android:textColor="@color/purple_500"
            android:textSize="18dp"
            android:fontFamily="@font/source_titulo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editcontraseña1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/style_stroke"
                android:hint="@string/tex_YouPassword"
                android:inputType="textPassword"
                android:fontFamily="@font/source_texto"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:text="@string/tex_repeatpassword"
            android:textColor="@color/purple_500"
            android:textSize="18dp"
            android:fontFamily="@font/source_titulo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editcontraseña2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/style_stroke"
                android:hint="@string/tex_YouPassword"
                android:inputType="textPassword"
                android:fontFamily="@font/source_texto"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/googlebutton"
            android:layout_width="117dp"
            android:layout_height="65dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="#F2D6D6D3"
            android:drawableLeft="@drawable/common_google_signin_btn_icon_light"
            android:onClick="logeogoogle"
            android:text="Google"
            android:textColor="@color/black"
            android:textSize="10dp"
            app:cornerRadius="20dp"
            android:fontFamily="@font/source_button"/>

        <Button
            android:id="@+id/facebookbutton"
            android:layout_width="114dp"
            android:layout_height="65dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="#3F51B5"
            android:onClick="logeofacebook"
            android:textSize="10dp"
            app:cornerRadius="20dp"
            android:text="Facebook"
            android:textColor="@color/white"
            app:icon="@drawable/com_facebook_button_icon"
            android:fontFamily="@font/source_button"/>

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:onClick="guardar"
            android:text="@string/tex_Sig"
            android:textSize="12dp"
            app:cornerRadius="20dp"
            android:fontFamily="@font/source_button"/>

    </LinearLayout>

</LinearLayout>